Differences Between DuMuX 2.7 and DuMuX 2.8
===================================================

* IMPORTANT NOTES:

* DELETED BUILD SYSTEM: The Autotools based build system was removed, use the
  CMake based build system as it is default since Dune 2.4.

* IMPROVEMENTS and ENHANCEMENTS:
  - The zero equation turbulence models (zeroeq) have been added as new models
    to the freeflow folder.
  - Tests for coupling a turbulent free flow using zeroeq turbulence models
    with flow in a porous medium have been added.
  - The constructor of the multidomain problems has changed. They will now be called
    directly from the start.hh, identical to the other problems. The new parameter
    are the TimeManager and the HostGrid.
  - The interfacegridcreator is now available as a new GridCreator type.
  - The gridcreator is now the new standard grid creator replacing the dgfgridcreator,
    it comprises all functionality from the dgf grid creator (see also immediate
    interface changes), plus the ability to read gmsh, or build a
    structured grid (only with dune 2.4) by merely changing the input file.

* IMMEDIATE INTERFACE CHANGES not allowing/requiring a deprecation period:
  - The use and support for SGrid is dropped. SGrid is deprecated in Dune 2.4.
    Use YaspGrid instead.
  - The (new standard) GridCreator's public method gridPtr has been removed. For
    using PARAMETERS from DGF files use the GridCreators parameters method via
    GridCreator::parameters(...). See co2 test for an example.

* Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.8: BEWARE: The
  compiler will not print any warning if a deprecated property or parameter name
  is used. However, a run-time warning should appear in the summary lines after
  the corresponding run.

* Deprecated CLASSES/FILES, to be removed after 2.8:
  - The InterfaceMeshCreator has been moved to InterfaceGridCreator and adapted